Updated html file

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,31 @@ form.login {
 h1{
   font-family: 'Cormorant Garamond', serif;
 }
+
+body {
+  background: url('https://a0.muscache.com/im/pictures/de26f95b-fc03-4918-9df9-e3be5593adc8.jpg?im_w=1680') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+
+#traveler{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.about{
+  color:white;
+}
+
+a{
+  font-size: 150%;
+  color:white;
+}
+
+.footer-copyright{
+  font-size: 150%;
+  color:white;
+}
