--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -84,13 +84,31 @@ a{
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  padding-bottom: 20px;
 }
 
-.bg-dark {
-  background-color: #343a40!important;
+.card {
+  background-color: white;
+  color: inherit;
+  opacity: 0.8;
+  padding: 25px;
 }
 
-.text-white {
-  color: #fff!important;
+i {
+  padding-right: 10px;
 }
+
+button.member {
+  padding: 20px;
+  font-size: 15px;
+  min-width: 200px;
+  max-width: 200px;
+}
+/* .bg-dark { */
+  /* background-color: #343a40!important; */
+/* }  */
+
+/* .text-white { */
+  /* color: #fff!important; */
+/* } */ 
 /* >>>>>>> main */
