--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,5 +1,5 @@
-<section>
+<section id="blog-header">
     <div>
-        
+        <h1>Read About Our Travel Experiences</h1>
     </div>
 </section>
