--- a/views/partials/blogs/blog.handlebars
+++ b/views/partials/blogs/blog.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div id="posts">
     <h2>
         Author: {{dataValues.userName}}
     </h2>
@@ -7,6 +7,9 @@
         Title: {{dataValues.title}}
     </h2>
     <hr>
+    <h3>
+        {{dataValues.createdAt}}
+    </h3>
     <p>
         {{dataValues.text}}
     </p>
