styled the blog page

--- a/views/partials/blogs/navbar.handlebars
+++ b/views/partials/blogs/navbar.handlebars
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#" id="logo">The Traveler's Memoir</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Features</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
-            <a class="nav-item nav-link disabled" href="#">Disabled</a>
+    <div class="collapse navbar-collapse " id="navbarNavAltMarkup" >
+        <div class="navbar-nav ml-auto links">
+
+            <span class="my-span"><a class="nav-item nav-link active link-color" href="/members"><i class="fas fa-user"></i><span class="sr-only">(current)</span></a></span>
+            <span class="my-span"><a class="nav-item nav-link link-color" href="#">Create New Blog</a></span>
+            <span class="my-span"><a class="nav-item nav-link link-color" href="#">Sign out</a></span>
         </div>
     </div>
 </nav>
