--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -20,7 +20,7 @@ body {
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.65);
-  color: white;
+  color: #edf0f1;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,11 +37,51 @@ body {
   margin: 0;
   font-size: 28px;
 }
+.my-span {
+  border-radius: 8%;
+}
 
-#posts {
+.posts {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 60px;
+}
+
+.my-span {
+  padding: 9px 25px;
+  background-color: rgba(255, 164, 91,1);
+  color: white;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  margin-left: 5px;
+}
+
+.my-span:hover {
+  background-color: rgba(255, 164, 91, 0.8);
+}
+.brand-color{
+  color: rgba(255, 164, 91);
+}
+
+.link-color{
+  color: white;
+}
+
+.about-us {
+  height: 50vh;
+  background-color:  rgba(255, 164, 91);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-links {
+  text-decoration: underline;
+  margin-left: 10px;
+  font-weight: 500;
+  font-size: 30px;
+  color: black;
 }
