added links to the navbar

--- a/views/partials/blogs/navbar.handlebars
+++ b/views/partials/blogs/navbar.handlebars
@@ -8,8 +8,8 @@
         <div class="navbar-nav ml-auto links">
 
             <span class="my-span"><a class="nav-item nav-link active link-color" href="/members"><i class="fas fa-user"></i><span class="sr-only">(current)</span></a></span>
-            <span class="my-span"><a class="nav-item nav-link link-color" href="#">Create New Blog</a></span>
-            <span class="my-span"><a class="nav-item nav-link link-color" href="#">Sign out</a></span>
+            <span class="my-span"><a class="nav-item nav-link link-color" href="/blog">Create New Blog</a></span>
+            <span class="my-span"><a class="nav-item nav-link link-color" href="/">Sign out</a></span>
         </div>
     </div>
 </nav>
