--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,6 +105,33 @@ button.member {
   min-width: 200px;
   max-width: 200px;
 }
+.my-blog{
+  padding: 35px 35px;
+}
+.blog-btn{
+  background-color: rgba(255, 164, 91,1);
+  color: white;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+.blog-btn:hover{
+  background-color: rgba(255, 164, 91, 0.6);
+}
+.my-span {
+  padding: 9px 25px;
+  background-color: rgba(255, 164, 91,1);
+  color: white;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  margin-left: 5px;
+}
+.my-span:hover {
+  background-color: rgba(255, 164, 91, 0.8);
+}
 /* .bg-dark { */
   /* background-color: #343a40!important; */
 /* }  */
