--- a/views/partials/blogs/blog.handlebars
+++ b/views/partials/blogs/blog.handlebars
@@ -7,7 +7,7 @@
         Title: {{dataValues.title}}
     </h2>
     <hr>
-    <h3>
+    <h3 class="timeData">
         {{dataValues.createdAt}}
     </h3>
     <p>
