--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -104,11 +104,22 @@ button.member {
   min-width: 200px;
   max-width: 200px;
 }
-/* .bg-dark { */
-  /* background-color: #343a40!important; */
-/* }  */
 
-/* .text-white { */
-  /* color: #fff!important; */
-/* } */ 
-/* >>>>>>> main */
+div.explore {
+    background-color: white;
+    color: inherit;
+    opacity: 0.8;
+    padding: 25px;
+    margin-bottom: 50px;
+  }
+
+img.nps, img.air {
+  max-width: 150px;
+  max-height: 150px;
+}
+
+a.explore {
+  color: inherit;
+  font-size: inherit;
+}
+
