--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,14 +8,13 @@ hr{
   color: #fff;
   width: 70%;
 }
+
+.welcome-container{
+  padding-top: 2rem!important;
+}
 /* <<<<<<< venus */
 h1{
   font-family: 'Cormorant Garamond', serif;
-}
-
-.title{
-  margin-left: 2rem!important;
-  margin-right: 2rem!important;
 }
 
 .link{
@@ -261,4 +260,39 @@ opacity: 0.5;
   border:0.2rem solid white;
   cursor: pointer;
 
+}
+
+.date-container{
+  border-bottom: black solid .1rem;
+  border-top:  black solid .1rem;
+  max-width: max-content;
+  justify-content: center;
+  text-align: center;
+  max-height: max-content;
+  font-size: 1.5rem!important;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.date:hover{
+  color: #007bff;
+  transition: .4s;
+}
+
+.date p{
+  padding-top: 0rem;
+}
+
+.calendar-container{
+  max-width: max-content;
+  padding: 1rem;
+}
+.calendar-image-container{
+  max-width: max-content;
+  padding: 1rem;
+}
+
+.blog-container{
+  justify-content: center!important;
+  text-align: center!important;
 }
