updated navbar style for member, blog & explore html pages

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,7 +100,7 @@ a{
   border-bottom: 1px solid #e5e5e5;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, nav.navbar {
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
   padding-bottom: 20px;
 }
@@ -131,6 +131,10 @@ a.member {
 }
 
 /* Explore Page  */
+
+h1.explore {
+  font-size: 4rem;
+}
 
 div.explore {
     background-color: white;
